--- a/src/webui/src/styles.scss
+++ b/src/webui/src/styles.scss
@@ -35,7 +35,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-//$loader-img: url(/assets/images/loading.gif);
+$loader-img: url(/assets/images/loading.gif);
 .loading-indicator-block {
   position: absolute;
   width: 100%;
